force-app/main/default/objects/SHT_Dave__c/SHT_Dave__c.object-meta.xml
<CustomObject>
    <label>Sales/Hedge Transaction</label>
    <nameField>
        <displayFormat>SHTD-{0000}</displayFormat>
        <label>SHT DAVE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales/Hedge Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>