force-app/main/default/objects/SHT_Dave__c/fields/Exposure_Factor__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Factor__c</fullName>
    <label>Net Exposure(LOTS)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>