force-app/main/default/objects/SHT_Dave__c/fields/Hedge__c.field-meta.xml
<CustomField>
    <fullName>Hedge__c</fullName>
    <label>Hedge(LOTS)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>