force-app/main/default/objects/SHT_Dave__c/fields/Hedged_Vol__c.field-meta.xml
<CustomField>
    <fullName>Hedged_Vol__c</fullName>
    <label>Hedged Vol</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>