force-app/main/default/objects/SHT_Dave__c/fields/Mass_MT__c.field-meta.xml
<CustomField>
    <fullName>Mass_MT__c</fullName>
    <label>Mass(MT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>