force-app/main/default/objects/SHT_Dave__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>GASOIL</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
            <value>
                <fullName>ULG98</fullName>
            </value>
            <value>
                <fullName>ULG95 E10</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>MOGAS</fullName>
            </value>
            <value>
                <fullName>AGO B0</fullName>
            </value>
            <value>
                <fullName>AGO B0 CH</fullName>
            </value>
            <value>
                <fullName>AGO B7 CH</fullName>
            </value>
            <value>
                <fullName>AGO VPD</fullName>
            </value>
            <value>
                <fullName>GTL B0</fullName>
            </value>
            <value>
                <fullName>AVGAS</fullName>
            </value>
            <value>
                <fullName>IGO 10ppm</fullName>
            </value>
            <value>
                <fullName>ULG100 VP</fullName>
            </value>
            <value>
                <fullName>ULG95 E0</fullName>
            </value>
            <value>
                <fullName>ULG95_BOB_E5</fullName>
            </value>
            <value>
                <fullName>IGO 1000ppm</fullName>
            </value>
            <value>
                <fullName>GTL B7</fullName>
            </value>
            <value>
                <fullName>MOGAS 98</fullName>
                <isActive>false</isActive>
                <label>MOGAS 98</label>
            </value>
            <value>
                <fullName>MOGAS E10</fullName>
                <isActive>false</isActive>
                <label>MOGAS E10</label>
            </value>
            <value>
                <fullName>UGL95 E5</fullName>
                <isActive>false</isActive>
                <label>UGL95 E5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>