force-app/main/default/objects/SHT_Dave__c/fields/SHT_Dave_Master__c.field-meta.xml
<CustomField>
    <fullName>SHT_Dave_Master__c</fullName>
    <label>SHT Dave Master</label>
    <referenceTo>SHT_Dave_Master__c</referenceTo>
    <relationshipName>SHT_Dave</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>