force-app/main/default/objects/SHT_Dave__c/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <label>Time Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>