force-app/main/default/objects/SHT_Dave__c/fields/Transactions__c.field-meta.xml
<CustomField>
    <fullName>Transactions__c</fullName>
    <label>Transactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hedge</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>