force-app/main/default/objects/SHT_Dave__c/listViews/AGO_B7_Hedge.listView-meta.xml
<ListView>
    <fullName>AGO_B7_Hedge</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Time_Stamp__c</columns>
    <columns>Transactions__c</columns>
    <columns>Mass_MT__c</columns>
    <columns>Hedge__c</columns>
    <columns>Exposure_Factor__c</columns>
    <columns>Created_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name__c</field>
        <operation>equals</operation>
        <value>AGO B7</value>
    </filters>
    <filters>
        <field>Transactions__c</field>
        <operation>equals</operation>
        <value>Hedge</value>
    </filters>
    <label>AGO-B7 Hedge</label>
</ListView>