force-app/main/default/objects/SHT_Dave__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Product_Name__c</columns>
    <columns>Exposure_Factor__c</columns>
    <columns>Transactions__c</columns>
    <columns>Hedged_Vol__c</columns>
    <columns>Hedging_Date__c</columns>
    <columns>Created_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Time_Stamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>