force-app/main/default/objects/SHT_Dave__c/listViews/Copy_of_ALL_SOM.listView-meta.xml
<ListView>
    <fullName>Copy_of_ALL_SOM</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>SHT_Dave_Master__c</columns>
    <columns>Transactions__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Mass_MT__c</columns>
    <columns>Mass_CBM__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Copy of ALL(SOM)</label>
</ListView>