force-app/main/default/objects/SHT_Dave__c/listViews/IGO_50ppm_Hedge.listView-meta.xml
<ListView>
    <fullName>IGO_50ppm_Hedge</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Transactions__c</columns>
    <columns>Time_Stamp__c</columns>
    <columns>Mass_MT__c</columns>
    <columns>Hedge__c</columns>
    <columns>Exposure_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name__c</field>
        <operation>equals</operation>
        <value>IGO 50ppm</value>
    </filters>
    <filters>
        <field>Transactions__c</field>
        <operation>equals</operation>
        <value>Hedge</value>
    </filters>
    <label>IGO 50ppm Hedge</label>
</ListView>